# multi-module-monolith-maybe-manageable

./: .gitignore  README.md  build.sh  docker-compose.yml  pyproject.toml
lambda1/: main.tf  pyproject.toml  terraform.tfstate
lambda1/lambda1/: lambda_handler.py
lambda2/: main.tf  pyproject.toml
lambda2/lambda2/: lambda_handler.py
lib1/: pyproject.toml
lib1/lib1/: cats.py
lib2/: pyproject.toml
lib2/lib2/: something_else.py
shared_lib/: pyproject.toml
shared_lib/shared_lib/: wisdom.py
