[tool.poetry]
name = "lambda1"
version = "0.1.0"
description = ""
authors = ["Bence Balint <bence.balint@ovoenergy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lib1 = {path = "../lib1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
