[tool.poetry]
name = "lambda2"
version = "0.1.0"
description = ""
authors = ["Bence Balint <bence.balint@ovoenergy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
shared-lib = {path = "../shared_lib"}
lib2 = {path = "../lib2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
